Fixes issue with autozoom on safari

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
 }
 
 .expected-container {
@@ -20,4 +21,11 @@ body {
 
 .result{
     display: flex;
+}
+
+input[type='text'],
+input[type='number'],
+textarea {
+  font-size: 16px;
+  border-width: 0 0 1px 0;
 }
